fix: navbar-styles-remove-wrap

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,7 +12,6 @@
 
 .navbarContainer{
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   gap: 10rem;
 }
